# operation_panel

./: CMakeLists.txt  CMakeLists.txt~  package.xml  plugin_description.xml
grasps/: _grenade_wsg50_0_128.txt  aa_battery_wsg50_0_128.txt  aaa_battery_wsg50_0_128.txt  bag_wsg50_100_228.txt  bag_wsg50_100_228.txt_  bag_wsg50_100_228.txt__  bottle_wsg50_0_128.txt  cup_wsg50_0_128.txt  cup_wsg50_0_128.txt_  domik_v_derevne_wsg50_0_128.txt  grenade_wsg50_0_128.txt  jar_wsg50_0_128.txt  lamp_wsg50_0_128.txt  phone_wsg50_0_128.txt  pipe_wsg50_0_128.txt  red_sport_tool_wsg50_0_128.txt  sugar_wsg50_0_128.txt  sugar_wsg50_0_128_.txt  sugar_wsg50_100_228.txt
grasps/Computed/: bag_wsg50_0_128.txt
grasps/bag/: bag_wsg50_0_128_box_005.txt  bag_wsg50_100_228_box_0025.txt  bag_wsg50_100_228_box_005.txt  bag_wsg50_50_178_box_005.txt
grasps/bag_dimensions/: bag_wsg50_0_128_box_0025_dim.txt  bag_wsg50_100_228_box_0025_dim.txt  bag_wsg50_50_178_box_005_dim.txt
grasps/old/: bottle_wsg50_0_128.txt  domik_v_derevne_wsg50_0_128.txt  domik_v_derevne_wsg50_0_128.txt__  grenade_wsg50_0_128.txt  grenade_wsg50_0_128_.txt  grenade_wsg50_0_128__.txt  lamp_wsg50_0_128.txt  pipe_wsg50_0_128.txt
include/operation_panel/: master_slave_panel.h  open_bag_panel.h  operation_panel.h  robot_config.h  scan_panel.h  unscrew_panel.h
include/operation_panel/ActionClients/: ActionMasterSlaveClient.h  ActionUnscrewClient.h
include/operation_panel/BoundingBox/: BoundingBox.h
include/operation_panel/CollisionObjects/: AddObjectCommand.h  AttachObjectCommand.h  CollisionObjectUtilities.h  DetachObjectCommand.h  EmptyObjectCommand.h  ICollisionObjectCommand.h  ICollisionObjectController.h  RemoveObjectCommand.h
include/operation_panel/Executers/: ExecutionWaiter.h  IExecuter.h  MoveGroupExecuter.h
include/operation_panel/Facades/: OpenBagFacade.h  PickAndPlaceFacade.h  PretreatmentFacade.h  UnscrewFacade.h
include/operation_panel/GUI/: MasterSlaveGUI.h  OpenBagGUI.h  PickAndPlaceGUI.h  PretreatmentGUI.h  UnscrewGUI.h
include/operation_panel/GraspsFilters/: CollisionFilter.h  IGraspsFilter.h  ReachAbilityFilter.h  ValidStateFilter.h
include/operation_panel/GripperCommands/: CloseGripperCommand.h  EmptyGripperCommand.h  IGripperCommand.h  OpenGripperCommand.h
include/operation_panel/GripperControllers/: EGN160_Controller.h  IGripperController.h  WSG50_Controller.h
include/operation_panel/InteractiveMarkers/: InteractiveMarkerArrow.h  InteractiveMarkerBase.h  InteractiveMarkerGraspChooser.h  InteractiveMarkerObject.h  InteractiveMarkerPoint.h  InteractiveMarkerUnscrewChooser.h
include/operation_panel/MotionPlanners/: MoveGroupMotionPlanner.h  ObjectScanerMotionPlanner.h  OpenBagMotionPlanner.h
include/operation_panel/MsgsParsers/: IMsgsParser.h  ORKMsgsParser.h  ObjectMsgsParser.h  PoseMsgsParser.h
include/operation_panel/PathPlanners/: PickAndPlacePlanner.h
include/operation_panel/Plans/: MoveGroupMotionPlan.h
include/operation_panel/PointCloudProcessor/: PointCloudProcessor.h
include/operation_panel/Readers/: DBReader.h  FileReader.h  IGraspReader.h
include/operation_panel/Scene/: Scene.h
include/operation_panel/Servers/: CoordsServer.h  IServer.h  MarkerServer.h  TFServer.h
include/operation_panel/ServersManagers/: IServerManager.h  InteractiveMarkerServerManager.h  MarkerServerManager.h  TFServerManager.h
include/operation_panel/Utilities/: EigenUtils.h
log/: plans_log.txt
src/: master_slave_panel.cpp  open_bag_panel.cpp  operation_panel.cpp  scan_panel.cpp  unscrew_panel.cpp
src/ActionClients/: ActionMasterSlaveClient.cpp  ActionUnscrewClient.cpp
src/BoundingBox/: BoundingBox.cpp
src/CollisionObjects/: AddObjectCommand.cpp  AttachObjectCommand.cpp  CollisionObjectUtilities.cpp  DetachObjectCommand.cpp  EmptyObjectCommand.cpp  ICollisionObjectCommand.cpp  ICollisionObjectController.cpp  RemoveObjectCommand.cpp
src/Executers/: ExecutionWaiter.cpp  IExecuter.cpp  MoveGroupExecuter.cpp
src/Facades/: OpenBagFacade.cpp  PickAndPlaceFacade.cpp  PretreatmentFacade.cpp  UnscrewFacade.cpp
src/GUI/: MasterSlaveGUI.cpp  OpenBagGUI.cpp  PickAndPlaceGUI.cpp  PretreatmentGUI.cpp  UnscrewGUI.cpp
src/GraspsFilters/: CollisionFilter.cpp  IGraspsFilter.cpp  ReachAbilityFilter.cpp  ValidStateFilter.cpp
src/GripperCommands/: CloseGripperCommand.cpp  EmptyGripperCommand.cpp  IGripperCommand.cpp  OpenGripperCommand.cpp
src/GripperControllers/: EGN160_Controller.cpp  IGripperController.cpp  WSG50_Controller.cpp
src/InteractiveMarkers/: InteractiveMarkerArrow.cpp  InteractiveMarkerBase.cpp  InteractiveMarkerGraspChooser.cpp  InteractiveMarkerObject.cpp  InteractiveMarkerPoint.cpp  InteractiveMarkerUnscrewChooser.cpp
src/MotionPlanners/: MoveGroupMotionPlanner.cpp  ObjectScanerMotionPlanner.cpp  OpenBagMotionPlanner.cpp
src/MsgsParsers/: IMsgsParser.cpp  ORKMsgsParser.cpp  ObjectMsgsParser.cpp  PoseMsgsParser.cpp
src/PathPlanners/: PickAndPlacePlanner.cpp
src/Plans/: MoveGroupMotionPlan.cpp
src/PointCloudProcessor/: PointCloudProcessor.cpp
src/Readers/: DBReader.cpp  FileReader.cpp  IGraspReader.cpp
src/Scene/: Scene.cpp
src/Servers/: CoordsServer.cpp  IServer.cpp  MarkerServer.cpp  TFServer.cpp
src/ServersManagers/: IServerManager.cpp  InteractiveMarkerServerManager.cpp  MarkerServerManager.cpp  TFServerManager.cpp
src/Utilities/: EigenUtils.cpp
